# wxFormBuilderDemo

./: MainFrame.fbp  res.py  setup.cfg  setup.py
src/wxDemo/: __init__.py  __main__.py  gui.py  mainFrame.py
