[metadata]
name = yuehengDemo
version = 0.0.1.dev2
author = Guoming Yuan
author_email = guomingyuan@gmail.com
description = A small example package
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
include_package_data = True
packages = find:
python_requires = >=3.6
install_requires =

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    yuehengDemo = wxDemo:show

[options.package_data]
wxDemo = data/*, images/*